--- a/src/sections/slices/FirstSection/styles.module.scss
+++ b/src/sections/slices/FirstSection/styles.module.scss
@@ -123,6 +123,7 @@
             border: 1px solid rgba(50, 10, 55, 0.4);
             border-radius: 8px;
             transition: all 0.5s ease-in-out;
+            min-height: 210px;
 
             .flex {
                 display: flex;
